# tauri-project-search

./: README.md  bun.lockb  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.svelte  App.tsx  Filters.tsx  Layout.tsx  Mail.tsx  Result-block.tsx  Search-box.tsx  Sidebar.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/src/: main.rs
src/lib/: Greet.svelte  run-shell-cmd.ts  search-helpers.ts
src/store/: filterSlice.ts  index.ts  searchResultSlice.ts
